@@ -1,3 +1,8 @@
+Tue Apr  2 11:45:21 2002  Gary Wong  <gtw@research.att.com>
+
+	* gtkgame.c (CubeAnalysis, TakeAnalysis): Remove gtk_widget_pop_style
+	calls.
+
 Mon Apr  1 00:39:29 2002  Joern Thyssen  <jthyssen@dk.ibm.com>
 
 	* makeweights.c: #include <string.h> 
